fix switch outline, try and fix vertical/dark mode tabs

--- a/packages/core/src/components/forms/_controls.scss
+++ b/packages/core/src/components/forms/_controls.scss
@@ -511,6 +511,10 @@ $control-indicator-spacing: $pt-grid-size !default;
           margin-top: $switch-indicator-margin - 1px;
         }
       }
+
+      @media (forced-colors: active) and (prefers-color-scheme: dark) {
+        border: 1px solid $pt-high-contrast-mode-border-color;
+      }
     }
 
     input:checked ~ .#{$ns}-control-indicator::before {
