--- a/packages/core/src/components/tabs/_tabs.scss
+++ b/packages/core/src/components/tabs/_tabs.scss
@@ -47,6 +47,11 @@ $tab-indicator-width: 3px !default;
       &[aria-selected="true"] {
         background-color: rgba($pt-intent-primary, 0.2);
         box-shadow: none;
+
+        @media (forced-colors: active) and (prefers-color-scheme: dark) {
+          background-color: $pt-high-contrast-mode-active-background-color;
+          color: $black;
+        }
       }
     }
 
@@ -201,6 +206,11 @@ $tab-indicator-width: 3px !default;
 
   .#{$ns}-tab-indicator {
     background-color: $dark-tab-color-selected;
+
+    @media (forced-colors: active) and (prefers-color-scheme: dark) {
+      // Windows High Contrast dark theme
+      background-color: $pt-high-contrast-mode-active-background-color;
+    }
   }
 }
 
